discussion/kv_engine/181923/181923_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

No need for locking for AuditConfig

All usage is from the same thread

Change-Id: I80a846c9b3f4bb3359ad8f2f8f748ceacc1adcf4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 07:51:06.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 08:59:31.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21531/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:293:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21531/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21531/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50751/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50751/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42595/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42595/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11259/ : FAILURE

Compile error at [2022-10-27T08:17:29.978Z] ../kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11259/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23563/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23563/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24803/ : FAILURE

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x33081) in __interceptor_malloc  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24803/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23971/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23971/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31987/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31987/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/261/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/261/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22991/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22991/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11350/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11350/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20800/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
